--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root{
-    --cor-fundo: hsl(208, 87%, 3%) ;
+    --cor-fundo: #01080e ;
     --cor-principal: #970b0b ;
     --cor-secundaria: #970b0b; 
     --cor-destaque: #ff0000;
