--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --cor-principal: #970b0b ;
     --cor-secundaria: #970b0b; 
     --cor-destaque: #ff0000;
-    --cor-texto: #ffffff;
+    --cor-texto: #f8f8f8;
 
 }
 
